@startuml
class com.froztlass.tafsirmate.ChatHistoryFragment {
- RecyclerView recyclerView
- ChatAdapter chatAdapter
- FirebaseFirestore firestore
- String userId
+ void onCreateView(void,LayoutInflater,ViewGroup?,void,Bundle?)
+ void null()
+ void onViewCreated(View,Bundle?)
- void loadChatHistory()
}


class com.froztlass.tafsirmate.adapter.ChatAdapter {
}
class com.froztlass.tafsirmate.adapter.ChatViewHolder {
+ TextView titleText
}



androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.ChatHistoryFragment
com.froztlass.tafsirmate.adapter.ViewHolder <|-- com.froztlass.tafsirmate.adapter.ChatViewHolder
@enduml